[Done --> Function Closure]

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="/function-invocation.js"></script>
+    <script src="/function-closures.js"></script>
 </body>
 </html>
