--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="demo"></p>
     
-    <script src="/function-closures.js"></script>
+    <script src="/async-callback.js"></script>
 </body>
 </html>
