[Done --> Async await]

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <p id="demo"></p>
     
-    <script src="/async-promise.js"></script>
+    <script src="/async-await.js"></script>
 </body>
 </html>
