[Done --> Dom methods]

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <p id="demo"></p>
+
     
-    <script src="/async-await.js"></script>
+    <script src="/dom-methods.js"></script>
 </body>
 </html>
