[Done --> Dom document]

--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="demo"></p>
+    <!-- <form id="frm1" action="/action_page.php">
+        First name: <input type="text" name="fname" value="Donald"><br>
+        Last name: <input type="text" name="lname" value="Duck"><br><br>
+        <input type="submit" value="Submit">
+      </form> 
 
-    
-    <script src="/dom-methods.js"></script>
+      <p id="demo"></p>
+     -->
+
+     <img src="text-1.jpg" alt="hello">
+     <img src="text-1.jpg" alt="hello">
+     <img src="text-1.jpg" alt="hello">
+     <img src="text-1.jpg" alt="hello">
+     <img src="text-1.jpg" alt="hello">
+     <img src="text-1.jpg" alt="hello">
+
+    <script src="/dom-document.js"></script>
 </body>
 </html>
