[Done --> Dom Form]

--- a/index.html
+++ b/index.html
@@ -6,22 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <form id="frm1" action="/action_page.php">
-        First name: <input type="text" name="fname" value="Donald"><br>
-        Last name: <input type="text" name="lname" value="Duck"><br><br>
+    <form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
+        Name: <input type="text" name="fname">
         <input type="submit" value="Submit">
-      </form> 
+    </form>
 
-      <p id="demo"></p>
-     -->
-
-     <img src="text-1.jpg" alt="hello">
-     <img src="text-1.jpg" alt="hello">
-     <img src="text-1.jpg" alt="hello">
-     <img src="text-1.jpg" alt="hello">
-     <img src="text-1.jpg" alt="hello">
-     <img src="text-1.jpg" alt="hello">
-
-    <script src="/dom-document.js"></script>
+    <script src="dom-forms.js"></script>
 </body>
 </html>
