--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
-        Name: <input type="text" name="fname">
-        <input type="submit" value="Submit">
-    </form>
+    <button onclick="styling()">Styling</button>
+    <p id="demo">Hello world</p>
 
-    <script src="dom-forms.js"></script>
+    <script src="dom-css.js"></script>
 </body>
 </html>
