--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #container {
+            width: 400px;
+            height: 400px;
+            position: relative;
+            background: yellow;
+        }
+        #animate {
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
-    <button onclick="styling()">Styling</button>
-    <p id="demo">Hello world</p>
-
-    <script src="dom-css.js"></script>
+    <div id="container">
+        <div id="animate"></div>
+    </div>
+    <button onClick="myMove()">Animate</button>
+    
+    <script src="dom-animation.js"></script>
 </body>
 </html>
