--- a/index.html
+++ b/index.html
@@ -4,27 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #container {
-            width: 400px;
-            height: 400px;
-            position: relative;
-            background: yellow;
-        }
-        #animate {
-            width: 50px;
-            height: 50px;
-            position: absolute;
-            background-color: red;
-        }
-    </style>
 </head>
-<body>
-    <div id="container">
-        <div id="animate"></div>
-    </div>
-    <button onClick="myMove()">Animate</button>
+<body onunload="console.log('document loaded')">
+    <input onChange="console.log('Hello')" type="text" name="" id="" placeholder="Your Name">
     
-    <script src="dom-animation.js"></script>
+    <p id="demo">Hello world</p>
+    <h1 onclick="this.innerHTML = 'Ooops!'">Click on this text!</h1>
+
+
+    <button id="button">Click</button>
+
+    <script src="dom-event.js"></script>
 </body>
 </html>
