[Done --> Dom event listener]

--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body onunload="console.log('document loaded')">
-    <input onChange="console.log('Hello')" type="text" name="" id="" placeholder="Your Name">
-    
-    <p id="demo">Hello world</p>
-    <h1 onclick="this.innerHTML = 'Ooops!'">Click on this text!</h1>
+<body>
+    <div id="container">
+        <button id="button">Click Me</button>
+    </div>
 
-
-    <button id="button">Click</button>
-
-    <script src="dom-event.js"></script>
+    <script src="dom-event-listener.js"></script>
 </body>
 </html>
