--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <button id="button">Click Me</button>
     </div>
 
-    <script src="dom-event-listener.js"></script>
+    <script src="dom-navigation.js"></script>
 </body>
 </html>
