[Done --> Dom Navigation]

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <button id="button">Click Me</button>
-    </div>
-
+    <p id="demo">
+        Hello World
+    </p>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     <script src="dom-navigation.js"></script>
 </body>
 </html>
