[Done --> Dom Collection]

--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="demo">
-        Hello World
-    </p>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-    <script src="dom-navigation.js"></script>
+    <p>Hello</p>
+    <p>World</p>
+
+    <script src="dom-collection.js"></script>
 </body>
 </html>
