--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello</p>
-    <p>World</p>
+    <p class="hello" id="one">Hello</p>
+    <p class="hello" id="two">World</p>
 
-    <script src="dom-collection.js"></script>
+    <script src="dom-node-list.js"></script>
 </body>
 </html>
