[Done --> Bom Window]

--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="hello" id="one">Hello</p>
-    <p class="hello" id="two">World</p>
+    <div id="width">
 
-    <script src="dom-node-list.js"></script>
+    </div>
+    <div id="height">
+        
+    </div>
+    <div>
+        <input type="button" value="Open window" onclick="openWindow()">
+    </div>
+
+    <div>
+        <input type="button" value="Close window" onclick="closeWindow()">
+    </div>
+
+    <script src="bom-window.js"></script>
 </body>
 </html>
