[Done --> Bom Screen]

--- a/index.html
+++ b/index.html
@@ -6,20 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="width">
+    <div id="width"></div>
+    <div id="height"></div>
+    <div id="availWidth"></div>
+    <div id="availHeight"></div>
+    <div id="colorDepth"></div>
+    <div id="pixelDepth"></div>
 
-    </div>
-    <div id="height">
-        
-    </div>
-    <div>
-        <input type="button" value="Open window" onclick="openWindow()">
-    </div>
-
-    <div>
-        <input type="button" value="Close window" onclick="closeWindow()">
-    </div>
-
-    <script src="bom-window.js"></script>
+    <script src="bom-screen.js"></script>
 </body>
 </html>
