--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="width"></div>
-    <div id="height"></div>
-    <div id="availWidth"></div>
-    <div id="availHeight"></div>
-    <div id="colorDepth"></div>
-    <div id="pixelDepth"></div>
+    <div id="confirm"></div>
+    <div id="prompt"></div>
 
-    <script src="bom-screen.js"></script>
+    <div><input type="button" value="Show alert" onclick="showAlert()"></div>
+    <div><input type="button" value="Show confirm" onclick="showConfirm()"></div>
+    <div><input type="button" value="Show prompt" onclick="showPrompt()"></div>
+
+    <script src="bom-popup.js"></script>
 </body>
 </html>
