[Done --> Bom cookies]

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <input id="id1" type="number" min="100" max="300" required />
+    <button onclick="validation()">OK</button>
 
-    <button onclick="setCookie('name', 'Asif Zaman', 2)">Set name cookie</button><br><br>
-    <button onclick="setCookie('username', 'asif', 2)">Set username cookie</button><br><br>
-    <button onclick="alert(getCookie('name'))">Get name cookie</button><br><br>
-    <button onclick="alert(getCookie('username'))">Get username cookie</button>
-    <button onClick="checkCookie('username')">Check Name Cookie</button>
-    <button onClick="checkCookie('age')">Check Age Cookie</button>
+    <p id="demo"></p>
 
-    <script src="bom-cookies.js"></script>
+    <script src="./api-form.js"></script>
 </body>
 </html>
