[Done --> storage api]

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="id1" type="number" min="100" max="300" required />
-    <button onclick="validation()">OK</button>
 
-    <p id="demo"></p>
-
-    <script src="./api-form.js"></script>
+    <script src="./api-storage.js"></script>
 </body>
 </html>
