--- a/js-play-with-dom/index.html
+++ b/js-play-with-dom/index.html
@@ -46,6 +46,6 @@
       <!--/complete-list-->
     </section>
     <!--/container-->
-    <script src="script.js"></script>
+    <script src=""></script>
   </body>
 </html>
