--- a/think-in-a-js-way/index.html
+++ b/think-in-a-js-way/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="./prototype.js"></script>
+    <script src="./class-inheritance.js"></script>
 </body>
 </html>
