--- a/think-in-a-js-way/index.html
+++ b/think-in-a-js-way/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="./callbacks-promice-async-await.js"></script>
+    <script src="./recursion.js"></script>
 </body>
 </html>
